# skybridge

./: .editorconfig  CMakeLists.txt  flash.sh  gen_nvs.sh  nvs_data_initial.csv  pack.sh  partitions.csv  rebuild.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  board.c  board.h  main.c  main.h  runloop.c  runloop.h  startup.c
main/bluetooth/: ble_main.c  ble_main.h  bt_dm.c  bt_dm.h  bt_main.c  bt_main.h  bt_stack.c  bt_stack.h
main/bluetooth/profile/: prf_ctrl.c  prf_ota.c  prf_trace.c  prf_uuids.h
main/bluetooth/service/: svc_ctrl.c  svc_ctrl.h  svc_ota.c  svc_ota.h  svc_trace.c  svc_trace.h
main/commu/: channel_ble.c  channel_defs.h  channel_esp.c  channel_forward.c  channel_forward.h  com_proto.c  com_proto.h  com_uart.c  com_uart.h
main/crc/: crc32.c  crc32.h  crc64.c  module.mk
main/dfu/: dfu.c  dfu.h  dfu_progress.c  dfu_transfer.c
